# rutube-downloader

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  OPENWRT_SETUP.md  README.md  app.py  create_github_repo.py  docker-compose.yml  env.example  push_to_github.ps1  push_to_github.sh  pyproject.toml  rutube_downloader.py
routes/: video.py
services/: video_service.py
static/: index.html  script.js  style.css
